--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "bootstrap": "^3.4.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-undraw-illustrations": "^2.0.3",
